# solidity-dev

./: .gitignore  package-lock.json  package.json  trigger.config.ts
alchemy/: main.js  main.test.js  package.json
dune-api/: graduated.json  main.py  pyproject.toml  query.py
forge/: package-lock.json
